Fixed alignment of filter button in the progress column in EGCS Difference

--- a/ShiptechV2/apps/shiptech/src/styles.scss
+++ b/ShiptechV2/apps/shiptech/src/styles.scss
@@ -201,3 +201,12 @@ body .ui-tabmenu .ui-tabmenu-nav {
 input.BPInNumField::-webkit-input-placeholder {
   color: rgb(255, 247, 247);
 }
+
+.ag-theme-material .ag-filter .ag-filter-apply-panel {
+  padding-right: unset !important;
+}
+
+.ag-theme-material .ag-filter .ag-filter-apply-panel button + button {
+  margin-left: unset !important;
+  padding-right: 8px;
+}
